--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "root",
     "version": "0.0.0",
     "scripts": {
-        "bootstrap": "lerna bootstrap"
+        "bootstrap": "lerna bootstrap",
+        "version": "lerna version --conventional-commits",
+        "publish": "lerna publish"
     },
     "repository": {
         "type": "git",
