--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --target=es2019",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --target=es2019",
-        "build": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
+        "build": "npm run build:cjs -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
         "dev:cjs": "npm run build:cjs -- --watch",
         "dev:esm": "npm run build:esm -- --watch",
         "test": "jest",
