--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,7 +5,7 @@
         "build:iife": "esbuild src/index.tsx --bundle --outfile=dist/index.browser.js --format=iife --external:@master/css --external:react",
         "build:cjs": "esbuild src/index.tsx --bundle --outfile=dist/index.cjs --format=cjs --platform=node --external:@master/css --external:react",
         "build:esm": "esbuild src/index.tsx --bundle --outfile=dist/index.mjs --format=esm --platform=node --external:@master/css --external:react",
-        "build": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:iife -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
+        "build": "npm run build:cjs -- --minify --sourcemap && npm run build:iife -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
         "dev:iife": "npm run build:iife -- --watch",
         "dev:cjs": "npm run build:cjs -- --watch",
         "dev:esm": "npm run build:esm -- --watch",
