--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -2,11 +2,10 @@
     "name": "@master/css.webpack",
     "version": "2.0.0-beta.19",
     "scripts": {
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --target=es2019",
-        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --target=es2019",
-        "build": "npm run build:cjs -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
-        "dev:cjs": "npm run build:cjs -- --watch",
-        "dev:esm": "npm run build:esm -- --watch",
+        "build:cjs": "esbuild --outfile=dist/index.cjs --format=cjs",
+        "build:esm": "esbuild --outfile=dist/index.mjs --format=esm",
+        "build": "concurrently 'npm:build:* -- src/index.ts --bundle --minify --sourcemap --platform=node' 'tsc --emitDeclarationOnly'",
+        "dev": "concurrently 'npm:build:* -- --watch'",
         "test": "jest",
         "lint": "eslint ./src"
     },
