--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -2,9 +2,9 @@
     "name": "@master/css.compiler",
     "version": "2.0.0-beta.19",
     "scripts": {
-        "build:cjs": "esbuild src/index.ts --outfile=dist/index.cjs --format=cjs --platform=node",
-        "build:esm": "esbuild src/index.ts --outfile=dist/index.mjs --format=esm --platform=node",
-        "build": "concurrently 'npm:build:* -- --bundle --minify --sourcemap' 'tsc --emitDeclarationOnly'",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
+        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node",
+        "build": "concurrently 'npm:build:* -- --minify --sourcemap' 'tsc --emitDeclarationOnly'",
         "dev": "concurrently 'npm:build:* -- --watch'",
         "test": "jest",
         "lint": "eslint ./src"
