--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -2,10 +2,10 @@
     "name": "@master/css",
     "version": "2.0.0-beta.41",
     "scripts": {
-        "build:iife": "esbuild src/index.browser.ts --outfile=dist/index.browser.js --format=iife",
-        "build:cjs": "esbuild src/index.ts --outfile=dist/index.cjs --format=cjs --platform=node",
-        "build:esm": "esbuild src/index.ts --outfile=dist/index.mjs --format=esm --platform=node",
-        "build": "concurrently 'npm:build:* -- --bundle --minify --sourcemap' 'tsc --emitDeclarationOnly'",
+        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
+        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node",
+        "build": "concurrently 'npm:build:* -- --minify --sourcemap' 'tsc --emitDeclarationOnly'",
         "dev": "concurrently 'npm:build:* -- --watch'",
         "test": "jest",
         "lint": "eslint ./src"
