--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,10 +2,10 @@
     "name": "@master/css.react",
     "version": "2.0.0-beta.11",
     "scripts": {
-        "build:iife": "esbuild --outfile=dist/index.browser.js --format=iife",
-        "build:cjs": "esbuild --outfile=dist/index.cjs --format=cjs --platform=node",
-        "build:esm": "esbuild --outfile=dist/index.mjs --format=esm --platform=node",
-        "build": "concurrently 'npm:build:* -- src/index.tsx --bundle --minify --sourcemap --external:@master/css --external:react' 'tsc --emitDeclarationOnly'",
+        "build:iife": "esbuild src/index.tsx --bundle --outfile=dist/index.browser.js --format=iife",
+        "build:cjs": "esbuild src/index.tsx --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
+        "build:esm": "esbuild src/index.tsx --bundle --outfile=dist/index.mjs --format=esm --platform=node",
+        "build": "concurrently 'npm:build:* -- --minify --sourcemap --external:@master/css --external:react' 'tsc --emitDeclarationOnly'",
         "dev": "concurrently 'npm:build:* -- --watch'",
         "test": "jest --passWithNoTests",
         "lint": "eslint ./src"
