--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
         "lerna": "^6.0.3",
         "puppeteer": "^19.2.2",
         "typescript": "^4.8.4"
+    },
+    "commitlint": {
+        "extends": [
+            "@commitlint/config-conventional"
+        ]
     }
 }
