--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@master/css.webpack",
-    "version": "2.0.0-beta.19",
+    "version": "2.0.0-beta",
     "scripts": {
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm",
