--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
         "dedent": "^0.7.0",
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^8.0.2",
         "jest": "^29.3.1",
         "jest-environment-jsdom": "^29.3.1",
         "jest-puppeteer": "^6.1.1",
-        "lerna": "^6.0.3",
         "puppeteer": "^19.2.2",
+        "turbo": "^1.6.3",
         "typescript": "^4.8.4"
     },
     "commitlint": {
