fix: peerDeps, deps

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -48,7 +48,7 @@
         "dist"
     ],
     "peerDependencies": {
-        "@master/css": "*"
+        "@master/css": "workspace:*"
     },
     "dependencies": {
         "chalk": "^4.0.0"
