--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,11 @@
 {
     "$schema": "https://unpkg.com/@changesets/config@2.2.0/schema.json",
-    "changelog": "@changesets/cli/changelog",
+    "changelog": [
+        "@changesets/changelog-github",
+        {
+            "repo": "master-co/css"
+        }
+    ],
     "commit": false,
     "fixed": [],
     "linked": [],
