--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@changesets/changelog-github": "^0.4.7",
         "@changesets/cli": "^2.25.2",
         "@commitlint/cli": "^17.2.0",
         "@commitlint/config-conventional": "^17.2.0",
