--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -4,9 +4,8 @@
     "scripts": {
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm",
-        "build": "concurrently 'npm:build:* -- --minify --sourcemap --platform=node' 'tsc --emitDeclarationOnly'",
+        "build": "concurrently 'npm:build:* -- --minify --sourcemap --platform=node --external:@master/css --external:@master/css.compiler' 'tsc --emitDeclarationOnly'",
         "dev": "concurrently 'npm:build:* -- --watch'",
-        "test": "jest --passWithNoTests",
         "lint": "eslint ./src"
     },
     "license": "MIT",
