--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
             "@commitlint/config-conventional"
         ]
     },
-    "packageManager": "pnpm@7.15.0"
+    "packageManager": "pnpm@7.15.0",
+    "engines": {
+        "node": "^17"
+    }
 }
