--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "build:iife": "esbuild src/index.tsx --bundle --outfile=dist/index.browser.js --format=iife",
         "build:cjs": "esbuild src/index.tsx --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
-        "build:esm": "esbuild src/index.tsx --bundle --outfile=dist/index.mjs --format=esm --platform=node",
+        "build:esm": "esbuild src/index.tsx --bundle --outfile=dist/index.mjs --format=esm",
         "build": "concurrently 'npm:build:* -- --minify --sourcemap --external:@master/css --external:react' 'tsc --emitDeclarationOnly'",
         "dev": "concurrently 'npm:build:* -- --watch'",
         "lint": "eslint ./src"
