--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
         runs-on: ubuntu-20.04
         strategy:
             matrix:
-                node-version: [17]
+                node-version: [17.9.1]
         steps:
             - uses: actions/checkout@v3
             - uses: pnpm/action-setup@v2.2.4
@@ -34,11 +34,8 @@ jobs:
             - name: Setup PNPM config
               run: pnpm config set store-dir $PNPM_CACHE_FOLDER
 
-            - name: Install dependencies
-              run: pnpm install
-
-            - name: Build packages
-              run: pnpm run build
+            - name: Test, Lint, Build
+              run: pnpm run build:ci
 
             - name: Create and publish versions
               uses: changesets/action@v1
