--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
+        "build:ci": "turbo run test lint build --parallel",
         "build": "turbo run build --parallel",
         "test": "turbo run test --parallel",
         "lint": "turbo run lint --parallel",
