--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,16 @@
                 "dist/**"
             ]
         },
+        "build:ci": {
+            "dependsOn": [
+                "test",
+                "lint",
+                "^build"
+            ],
+            "outputs": [
+                "dist/**"
+            ]
+        },
         "test": {
             "outputs": [],
             "inputs": [
