--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,7 +45,9 @@
         "dist"
     ],
     "peerDependencies": {
-        "@master/css": "workspace:*",
         "react": ">=16.8.0"
+    },
+    "dependencies": {
+        "@master/css": "workspace:*"
     }
 }
