--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
-        "build:ci": "turbo run build:ci",
         "build": "turbo run build",
+        "check": "turbo run test lint --parallel",
         "test": "turbo run test --parallel",
         "lint": "turbo run lint --parallel",
         "dev": "turbo run dev --parallel --no-cache",
