--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ prefer-workspace-packages=true
 link-workspace-packages=true
 save-workspace-protocol=false
 auto-install-peers=true
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
