--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "test": "turbo run test --parallel",
         "lint": "turbo run lint --parallel",
         "dev": "turbo run dev --parallel --no-cache",
+        "version": "changeset version",
+        "publish": "changset publish",
         "bootstrap": "pnpm install"
     },
     "workspaces": [
