Update: Fix the versions of all packages

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -11,7 +11,7 @@
         "lint": "eslint ./src"
     },
     "license": "MIT",
-    "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
+    "description": "A Virtual CSS language with enhanced syntax ~13KB",
     "author": "Aoyue Design LLC.",
     "funding": "https://docs.master.co/css/donate",
     "homepage": "https://css.master.co",
