--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -18,7 +18,7 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/master-co/css.git",
-        "directory": "packages/compiler"
+        "directory": "packages/vite"
     },
     "keywords": [
         "webpack",
