--- a/package.json
+++ b/package.json
@@ -89,14 +89,17 @@
                     "assets": [
                         {
                             "path": "packages/css/dist/index.browser.js",
+                            "name": "master-css.js",
                             "label": "master-css.js"
                         },
                         {
                             "path": "packages/normal.css/dist/index.css",
+                            "name": "master-normal.css",
                             "label": "master-normal.css"
                         },
                         {
                             "path": "packages/keyframes.css/dist/index.css",
+                            "name": "master-keyframes.css",
                             "label": "master-keyframes.css"
                         }
                     ]
