--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": ".",
         "outDir": "dist",
-        "baseUrl": "."
     },
     "include": [
         "src/**/*.ts",
