--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "dist"
+        "baseUrl": ".",
+        "outDir": "dist",
     },
     "include": [
         "src/**/*.ts",
