--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -33,6 +33,8 @@
     ],
     "sideEffects": false,
     "main": "./dist/index.cjs",
+    "jsnext:main": "./dist/index.mjs",
+    "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
