--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -46,7 +46,9 @@
         "./src/polyfills/css-escape.ts"
     ],
     "main": "./dist/index.cjs",
+    "jsnext:main": "./dist/index.mjs",
     "browser": "./dist/index.browser.js",
+    "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
