--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -11,7 +11,8 @@
         "unlink": "npm rm ../../"
     },
     "dependencies": {
-        "vue": "^3.2.37"
+        "vue": "^3.2.37",
+        "@master/css.vite": "*"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^3.1.0",
