--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,7 +30,9 @@
     ],
     "sideEffects": false,
     "main": "./dist/index.cjs",
+    "jsnext:main": "./dist/index.mjs",
     "browser": "./dist/index.browser.js",
+    "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
