--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -33,6 +33,8 @@
     ],
     "sideEffects": false,
     "main": "./dist/index.cjs",
+    "jsnext:main": "./dist/index.mjs",
+    "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
@@ -46,8 +48,10 @@
         "dist"
     ],
     "peerDependencies": {
-        "vite": ">=3.0.0",
         "@master/css": "*",
         "@master/css.compiler": "*"
+    },
+    "devDependencies": {
+        "vite": "^3.2.4"
     }
 }
