--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -33,6 +33,8 @@
     ],
     "sideEffects": false,
     "main": "./dist/index.cjs",
+    "jsnext:main": "./dist/index.mjs",
+    "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
@@ -45,9 +47,6 @@
     "files": [
         "dist"
     ],
-    "peerDependencies": {
-        "webpack": ">=5.0.0"
-    },
     "dependencies": {
         "@master/css": "*",
         "@master/css.compiler": "*"
