--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -1,10 +1,11 @@
 {
     "name": "@master/css.vite",
     "scripts": {
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs",
-        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm",
-        "build": "concurrently 'npm:build:* -- --minify --sourcemap --platform=node --external:@master/css --external:@master/css.compiler' 'tsc --emitDeclarationOnly'",
-        "dev": "concurrently 'npm:build:* -- --watch'",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --minify --sourcemap --platform=node --external:@master/css --external:@master/css.compiler",
+        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --minify --sourcemap --platform=node --external:@master/css --external:@master/css.compiler",
+        "build": "npm run build:cjs && npm run build:esm && tsc --emitDeclarationOnly",
+        "dev:cjs": "npm run build:cjs -- --watch",
+        "dev:esm": "npm run build:esm -- --watch",
         "lint": "eslint ./src"
     },
     "license": "MIT",
