--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,7 +5,7 @@
         "build:cjs": "esbuild src/index.tsx --bundle --outfile=dist/index.cjs --format=cjs --platform=node --minify --sourcemap --external:@master/css --external:react",
         "build:esm": "esbuild src/index.tsx --bundle --outfile=dist/index.mjs --format=esm --minify --sourcemap --external:@master/css --external:react",
         "build": "npm run build:iife && npm run build:cjs && npm run build:esm && tsc --emitDeclarationOnly",
-        "dev:iife": "npm run build:cjs -- --watch",
+        "dev:iife": "npm run build:iife -- --watch",
         "dev:cjs": "npm run build:cjs -- --watch",
         "dev:esm": "npm run build:esm -- --watch",
         "lint": "eslint ./src"
