Fix: Chalk dependency

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -51,7 +51,7 @@
     "peerDependencies": {
         "@master/css": "*"
     },
-    "dependencies": {
-        "chalk": "^4.0.0"
+    "devDependencies": {
+        "chalk": "^5.1.2"
     }
 }
