--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -48,7 +48,7 @@
     "files": [
         "dist"
     ],
-    "peerDependencies": {
+    "dependencies": {
         "@master/css": "*"
     },
     "devDependencies": {
