--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -48,7 +48,9 @@
         "dist"
     ],
     "peerDependencies": {
-        "react": ">=16.8.0",
+        "react": ">= 16.8.0"
+    },
+    "dependencies": {
         "@master/css": "*"
     }
 }
