Chore: Make examples private

--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -1,5 +1,6 @@
 {
     "name": "master-css-compiler-with-parcel",
+    "private": true,
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
