Misc: Import Aron's workflow

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 prefer-workspace-packages=true
 link-workspace-packages=true
 save-workspace-protocol=false
-auto-install-peers=false
+auto-install-peers=true
