--- a/examples/svelte-kit/package.json
+++ b/examples/svelte-kit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-kit",
-    "private": true,
+	"private": true,
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -10,8 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-        "link": "npm link ../../",
-        "unlink": "npm rm ../../"
+		"link": "npm link ../../",
+		"unlink": "npm rm ../../"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
@@ -26,6 +26,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"rollup": "^2.79.1",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
