--- a/package.json
+++ b/package.json
@@ -17,110 +17,14 @@
         "examples/*"
     ],
     "devDependencies": {
-        "@commitlint/cli": "^17.2.0",
-        "@commitlint/config-angular": "^17.2.0",
-        "@semantic-release/exec": "^6.0.3",
-        "@swc/core": "^1.3.9",
-        "@swc/jest": "^0.2.23",
-        "@types/jest": "^29.2.3",
-        "@types/node": "^18.11.0",
-        "@typescript-eslint/eslint-plugin": "^5.40.1",
-        "@typescript-eslint/parser": "^5.40.1",
+        "aronrepo": "^1.0.0-beta.10",
         "concurrently": "^7.5.0",
-        "conventional-changelog-eslint": "^3.0.9",
         "dedent": "^0.7.0",
-        "esbuild": "^0.15.10",
-        "eslint": "^8.25.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "glob-run": "^0.1.7",
-        "jest": "^29.3.1",
         "jest-environment-jsdom": "^29.3.1",
         "jest-puppeteer": "^6.1.1",
-        "puppeteer": "^19.2.2",
-        "semantic-release": "^19.0.5",
-        "turbo": "^1.6.3",
-        "typescript": "^4.8.4"
-    },
-    "release": {
-        "preset": "eslint",
-        "plugins": [
-            [
-                "@semantic-release/commit-analyzer",
-                {
-                    "releaseRules": [
-                        {
-                            "type": "Docs",
-                            "scope": "README",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "Refactor",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "Style",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "Revert",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "Chore",
-                            "release": false
-                        },
-                        {
-                            "type": "CI",
-                            "release": false
-                        }
-                    ]
-                }
-            ],
-            "@semantic-release/release-notes-generator",
-            [
-                "@semantic-release/exec",
-                {
-                    "prepareCmd": "npm run check && npm run build",
-                    "publishCmd": "glob-run 'npm version ${nextRelease.version} -w packages/*' && glob-run 'npm publish --access public -w packages/*'"
-                }
-            ],
-            [
-                "@semantic-release/github",
-                {
-                    "assets": [
-                        {
-                            "path": "packages/css/dist/index.browser.js",
-                            "name": "master-css.js",
-                            "label": "master-css.js"
-                        },
-                        {
-                            "path": "packages/normal.css/dist/index.css",
-                            "name": "master-normal.css",
-                            "label": "master-normal.css"
-                        },
-                        {
-                            "path": "packages/keyframes.css/dist/index.css",
-                            "name": "master-keyframes.css",
-                            "label": "master-keyframes.css"
-                        }
-                    ]
-                }
-            ]
-        ],
-        "branches": [
-            "+([0-9])?(.{+([0-9]),x}).x",
-            "main",
-            "next",
-            "next-major",
-            {
-                "name": "beta",
-                "prerelease": true
-            },
-            {
-                "name": "alpha",
-                "prerelease": true
-            }
-        ]
+        "puppeteer": "^19.2.2"
     },
     "engines": {
         "node": "^18"
