Fix: Dependent versions of all packages in the workspace

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -49,7 +49,7 @@
         "dist"
     ],
     "dependencies": {
-        "@master/css": "*"
+        "@master/css": ""
     },
     "devDependencies": {
         "chalk": "^5.1.2"
