--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -52,8 +52,8 @@
         "vite": ">= 3.0.0"
     },
     "dependencies": {
-        "@master/css": "*",
-        "@master/css.compiler": "*"
+        "@master/css": "",
+        "@master/css.compiler": ""
     },
     "devDependencies": {
         "vite": "^3.2.4"
