--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -3,9 +3,9 @@
     "scripts": {
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --minify --sourcemap --external:@master/css",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --minify --sourcemap --external:@master/css",
-        "build": "npm run build:cjs && npm run build:esm && tsc --emitDeclarationOnly",
-        "dev:cjs": "npm run build:cjs -- --watch",
-        "dev:esm": "npm run build:esm -- --watch",
+        "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput",
+        "build": "conc 'npm:build:*'",
+        "dev": "conc 'npm:build:* -- --watch'",
         "lint": "eslint ./src"
     },
     "license": "MIT",
@@ -49,9 +49,7 @@
         "dist"
     ],
     "dependencies": {
-        "@master/css": ""
-    },
-    "devDependencies": {
+        "@master/css": "",
         "chalk": "^5.1.2"
     }
 }
