--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -4,10 +4,9 @@
         "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife --minify --sourcemap",
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --minify --sourcemap",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --minify --sourcemap",
-        "build": "npm run build:iife && npm run build:cjs && npm run build:esm && tsc --emitDeclarationOnly",
-        "dev:iife": "npm run build:iife -- --watch",
-        "dev:cjs": "npm run build:cjs -- --watch",
-        "dev:esm": "npm run build:esm -- --watch",
+        "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput",
+        "build": "conc 'npm:build:*'",
+        "dev": "conc 'npm:build:* -- --watch'",
         "test": "jest",
         "lint": "eslint ./src"
     },
@@ -64,7 +63,7 @@
         "dist"
     ],
     "dependencies": {
-        "@master/normal.css": "",
-        "@master/keyframes.css": ""
+        "@master/keyframes.css": "",
+        "@master/normal.css": ""
     }
 }
