--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -3,9 +3,9 @@
     "scripts": {
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --minify --sourcemap --platform=node --external:@master/css --external:@master/css.compiler",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --minify --sourcemap --platform=node --external:@master/css --external:@master/css.compiler",
-        "build": "npm run build:cjs && npm run build:esm && tsc --emitDeclarationOnly",
-        "dev:cjs": "npm run build:cjs -- --watch",
-        "dev:esm": "npm run build:esm -- --watch",
+        "build:type": "tsc --emitDeclarationOnly --preserveWatchOutput",
+        "build": "conc 'npm:build:*'",
+        "dev": "conc 'npm:build:* -- --watch'",
         "lint": "eslint ./src"
     },
     "license": "MIT",
